Added memory settings for Maven plugins