@@ -9,21 +9,21 @@
     <packaging>pom</packaging>
     <modules>
         <module>retoure-api</module>
-        <!--<module>retoure-persistence</module>-->
         <module>retoure-dhl-client</module>
         <module>retoure-static-web</module>
         <module>retoure-web-helper</module>
-        <module>retoure-web-demo</module>
         <module>retoure-store-demo</module>
-        <module>retoure-web-aktivshop</module>
+        <module>retoure-web-demo</module>
         <module>retoure-store-aktivshop</module>
-        <!--<module>retoure-enterprise</module>-->
+        <module>retoure-web-aktivshop</module>
         <module>retoure-delivery-tomee</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <version.java>1.7</version.java>
+        <version.maven-war-plugin>2.2</version.maven-war-plugin>
+        <version.javaee-api>6.0</version.javaee-api>
         <version.eu.artofcoding.beetlejuice>1.3.0.49</version.eu.artofcoding.beetlejuice>
         <version.org.apache.cxf>2.7.10</version.org.apache.cxf>
     </properties>
@@ -312,34 +312,6 @@
                 Third Party
             -->
             <dependency>
-                <groupId>javax.enterprise</groupId>
-                <artifactId>cdi-api</artifactId>
-                <version>1.0-SP4</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.weld</groupId>
-                <artifactId>weld-core</artifactId>
-                <version>1.1.10.Final</version>
-            </dependency>
-            <dependency>
-                <groupId>net.sourceforge.findbugs</groupId>
-                <artifactId>jsr305</artifactId>
-                <version>1.3.2</version>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish.main.javaee-api</groupId>
-                <artifactId>javaee-api</artifactId>
-                <version>3.1.2.2</version>
-                <type>provided</type>
-            </dependency>
-            <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>3.0.1</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
                 <groupId>org.jboss.spec</groupId>
                 <artifactId>jboss-javaee-6.0</artifactId>
                 <version>3.0.1.Final</version>
@@ -347,46 +319,15 @@
                 <scope>provided</scope>
             </dependency>
             <dependency>
-                <groupId>javax.xml.ws</groupId>
-                <artifactId>jaxws-api</artifactId>
-                <version>2.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.sun.xml.ws</groupId>
-                <artifactId>jaxws-rt</artifactId>
-                <version>2.2.7</version>
-            </dependency>
-            <dependency>
-                <groupId>com.sun.xml.messaging.saaj</groupId>
-                <artifactId>saaj-impl</artifactId>
-                <version>1.3.19</version>
-            </dependency>
-            <dependency>
-                <groupId>com.sun.xml.bind</groupId>
-                <artifactId>jaxb-xjc</artifactId>
-                <version>2.2.6</version>
-            </dependency>
-            <dependency>
-                <groupId>com.sun.xml.ws</groupId>
-                <artifactId>webservices</artifactId>
-                <version>2.1-b15</version>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish.metro</groupId>
-                <artifactId>webservices-osgi</artifactId>
-                <version>2.1</version>
-            </dependency>
-            <dependency>
-                <groupId>org.eclipse.persistence</groupId>
-                <artifactId>org.eclipse.persistence.jpa</artifactId>
-                <version>2.5.1</version>
+                <groupId>javax.enterprise</groupId>
+                <artifactId>cdi-api</artifactId>
+                <version>1.0-SP4</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.21</version>
-                <scope>provided</scope>
+                <groupId>com.sun.mail</groupId>
+                <artifactId>javax.mail</artifactId>
+                <version>1.5.0</version>
             </dependency>
             <dependency>
                 <groupId>javax.faces</groupId>
@@ -410,11 +351,6 @@
                 <version>3.3.3</version>
             </dependency>
             <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
-                <version>3.1.3.RELEASE</version>
-            </dependency>
-            <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>13.0.1</version>
@@ -422,7 +358,7 @@
             <dependency>
                 <groupId>org.apache.pdfbox</groupId>
                 <artifactId>pdfbox</artifactId>
-                <version>1.7.1</version>
+                <version>1.8.8</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -471,6 +407,34 @@
                     <artifactId>maven-ear-plugin</artifactId>
                     <version>2.9</version>
                 </plugin>
+                <!-- maven-javadoc-plugin -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.10.1</version>
+                    <configuration>
+                        <additionalJOptions>
+                            <additionalJOption>-J-Xms32m -J-Xmx128m</additionalJOption>
+                        </additionalJOptions>
+                    </configuration>
+                </plugin>
+                <!-- maven-surefire-plugin -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.18.1</version>
+                    <configuration>
+                        <forkCount>1</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>-Xms32m -Xmx512m -XX:MaxPermSize=256m</argLine>
+                    </configuration>
+                </plugin>
+                <!-- sonar-maven-plugin -->
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>2.6</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -488,6 +452,7 @@
                     <testTarget>${version.java}</testTarget>
                     <source>${version.java}</source>
                     <target>${version.java}</target>
+                    <compilerVersion>${version.java}</compilerVersion>
                 </configuration>
             </plugin>
         </plugins>
